--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>Swift Development - iOS - Sean Allen</title>
+    <title>Swift Development - iOS - Amit Samant</title>
         <!-- Prefetch DNS for external assets (Twitter widgets etc). -->
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
