other apps added

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             	<span class="last-name">SAMANT</span>
             </h1>
             <h2>iOS Developer</h2></div>
+            <!-- <div><a href="#view">View</a></div> -->
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="view"> 
         <h1>NOW</h1>
         <div class="container">
             <div class="row portfolio-row">
@@ -48,7 +49,7 @@
         <h1>PORTFOLIO</h1>
         <div class="container">
             <div class="row portfolio-row">
-                <div class="col-md-6 phone col-md-push-6"><img class="img-responsive" src="img/index/event365live.png"></div>
+                <div class="col-md-6 phone col-md-push-6"><img class="img-responsive" src="img/index/365LiveGlossy.png"></div>
                 <div class="col-md-6 col-md-pull-6">
                     <!-- NEED APP STORE LINKS AFTER LAUNCH -->
                     <img src="img/index/365liveappicon.png" class="app-icon">
@@ -57,79 +58,62 @@
                     <h3>My Role:</h3>
                     <p>Sole iOS developer from new project to the initial release.</p>
                     <h3>Technologies </h3>
-                    <p>Swift, Push Notifications, MVVM, Core Animations</p>
-                    <!-- <a href="https://itunes.apple.com/us/app/school-payit/id1263274612?mt=8" target="_blank">
-                    <button class="btn btn-default app-store-button" type="button"></button></a> -->
+                    <p>Swift, Push Notifications, MVVM, Core Animations, Push Notification, SpriteKit, Stripe Payment, Applozic realtime chat</p>
+                     <a href="https://apps.apple.com/us/app/365live/id1492460553" target="_blank">
+                    <button class="btn btn-default app-store-button" type="button"></button></a>
                     <!--  <button id="more-screens-aluna" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
                 </div>
             </div>
-            <!-- <div class="row portfolio-row">
-                <div class="col-md-6 phone"><img class="img-responsive" src="img/index/phone-mathstar.png"></div>
+            <div class="row portfolio-row">
+                <div class="col-md-6 phone"><img class="img-responsive" src="img/index/HostGlossy.png"></div>
                 <div class="col-md-6">
                     <a href="https://itunes.apple.com/us/app/summer-math-star/id1351411759?ls=1&mt=8" target="_blank">
                         <img src="img/index/365hostappicon.png" class="app-icon"></a>
-                    <h2>Summer Math Star</h2>
-                    <p>I contracted on <a href="https://mathstarapp.com/" target="_blank">Summer Math Star's</a> iOS application which helps elementry school students hone their math skills over the summer. Students progress through a wide variety of daily math challenges.</p>
+                    <h2>365 Partner</h2>
+                    <p>I am the sole iOS developer for <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">365 Live</a> which is still in development. In 365 Partner you can create, List Your events with us whether it’s a private rsvp only event or a Popular Public event such as concerts and Nightclubs and share your event with other Work associates such as Promoters or team Members. Total control is yours, you can even manage and monitor those users not forget to mention you can communicate and chat to keep everything all in one place</p>
                     <h3>My Role:</h3>
-                    <p>Built the majority of version 1.0 as part of a team of two. Focused on building the UI and logic for nearly all 200+ problem variations.</p>
+                    <p>Built the app from scratch to realeas. Focused on building the UI and logic for create event of diffrent type Public/Private with diffrent type of tickets and availability.</p>
                     <h3>Technologies </h3>
-                    <p>Swift, In-App Purchases, Push Notifications, Programmatic User Interface</p>
-                    <a href="https://itunes.apple.com/us/app/summer-math-star/id1351411759?ls=1&mt=8" target="_blank">
+                    <p>Swift, Push Notifications, MVVM, Core Animations, Push Notification, Applozic realtime chat</p>
+                    <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">
                     <button class="btn btn-default app-store-button" type="button"></button></a>
-                    <button id="more-screens-mathstar" class="btn btn-default more-screens-btn" type="button">More Screens</button>
+                    <!-- <button id="more-screens-mathstar" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
                 </div>
-            </div> -->
-            <!-- <div class="row portfolio-row">
-                <div class="col-md-6 phone col-md-push-6"><img class="img-responsive" src="img/index/phone-spi.png"></div>
+            </div>
+            <div class="row portfolio-row">
+                <div class="col-md-6 phone col-md-push-6"><img class="img-responsive" src="img/index/CFSSGlossy.png"></div>
                 <div class="col-md-6 col-md-pull-6">
-                	<a href="https://itunes.apple.com/us/app/school-payit/id1263274612?mt=8" target="_blank">
-                		<img src="img/index/app-icon-spi.png" class="app-icon"></a>
-                    <h2>School EventPay</h2>
-                    <p>I contracted on <a href="https://www.schooleventpay.com/" target="_blank">School EventPay's</a> iOS application which simplifies event communication and payment handling for schools. The app provides amazing convenience by allowing parents to sign permission slips and pay for school events all from their phone.</p>
+                    <!-- NEED APP STORE LINKS AFTER LAUNCH -->
+                    <img src="img/index/CFSSIcon.png" class="app-icon">
+                    <h2>CFSS</h2>
+                    <p>I am the sole iOS developer for <a href="https://apps.apple.com/in/app/cfss/id1461765634" target="_blank">CFSS</a>CFSS app provide informations on CFSS’s products and services, it provide requesting quote or reporting any trouble that user are facing regarding the fire safety systems. Right from the application. User can create tickets for there queries using the intregated Zendesk subsystem.</p>
                     <h3>My Role:</h3>
-                    <p>Built 95% of the initial release version.</p>
+                    <p>Sole iOS developer from new project to the final release.</p>
                     <h3>Technologies </h3>
-                    <p>Swift, Stripe Integration, Push Notifications</p>
-                    <a href="https://itunes.apple.com/us/app/school-payit/id1263274612?mt=8" target="_blank">
+                    <p>Swift, Zendesk Customer Support SDk, Zendesk Chat SDK, Rich Push Notification, CoreGraphics, CoreAnimation, Programatic UI</p>
+                     <a href="https://apps.apple.com/in/app/cfss/id1461765634" target="_blank">
                     <button class="btn btn-default app-store-button" type="button"></button></a>
-                    <button id="more-screens-spi" class="btn btn-default more-screens-btn" type="button">More Screens</button>
+                    <!--  <button id="more-screens-aluna" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
                 </div>
-            </div> -->
-        </div>
-    </div>
-    <div id="myModal" class="modal">
-        <span class="modal-close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
-        <img class="modal-content" id="img01">
-    </div>
-    <!-- <div class="blog">
-        <img src="img/index/youtube-icon.png" class = "youtube-img">
-        <div class = "container youtube">
-            <p>I create iOS development related content on my <a href="https://www.youtube.com/seanallen" target="_blank">YouTube Channel</a> with over 52k subscribers. I post 3 videos per week ranging from Swift News, tutorials, VLOGs, general industry discussion and live streams. Check out a sample below and subscribe to stay up to date!
-            </p>
-            <div class = "youtube-video-wrapper">
-                <div class="youtube-container">
-                    <iframe src="https://www.youtube.com/embed/1uVnWbygg_c" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="row portfolio-row">
+                <div class="col-md-6 phone"><img class="img-responsive" src="img/index/KashishGlossy.png"></div>
+                <div class="col-md-6">
+                    <a href="https://itunes.apple.com/us/app/summer-math-star/id1351411759?ls=1&mt=8" target="_blank">
+                        <img src="img/index/KashishIcon.png" class="app-icon"></a>
+                    <h2>Kashish</h2>
+                    <p>I am the sole iOS developer for <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">365 Live</a> which is still in development. In 365 Partner you can create, List Your events with us whether it’s a private rsvp only event or a Popular Public event such as concerts and Nightclubs and share your event with other Work associates such as Promoters or team Members. Total control is yours, you can even manage and monitor those users not forget to mention you can communicate and chat to keep everything all in one place</p>
+                    <h3>My Role:</h3>
+                    <p>Built the app from scratch to realeas. Focused on building the UI and logic for create event of diffrent type Public/Private with diffrent type of tickets and availability.</p>
+                    <h3>Technologies </h3>
+                    <p>Swift, Push Notifications, MVVM, Core Animations, Push Notification, Applozic realtime chat</p>
+                    <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">
+                    <button class="btn btn-default app-store-button" type="button"></button></a>
+                    <!-- <button id="more-screens-mathstar" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
                 </div>
             </div>
         </div>
-		<a href="https://www.youtube.com/channel/UCbTw29mcP12YlTt1EpUaVJw" target="blank">
-            <button class="btn btn-default more-screens-btn youtube-btn" type="button">See more iOS Dev videos</button>
-        </a>
-    </div> -->
-    <!-- <div class="blog">
-        <h1>PODCASTS</h1>
-        <div class = "container youtube">
-            <p>I've been a guest on various Swift podcasts. Check out the episodes below.</p>
-            <div class = "youtube-video-wrapper">
-                <div class="podcasts-container">
-                    <iframe sandbox="allow-same-origin allow-scripts allow-top-navigation allow-popups" scrolling=no width="100%" height="185" frameborder="0" src="https://embed.radiopublic.com/e?if=swiftcoders-interviews-with-swift-WovBzG&ge=s1!74d85e397bd7a6e24c9882b184ac75b4af303a8c"></iframe>
-                </div>
-                <div class="podcasts-container">
-                    <iframe sandbox="allow-same-origin allow-scripts allow-top-navigation allow-popups" scrolling=no width="100%" height="185" frameborder="0" src="https://embed.radiopublic.com/e?if=fireside-swift-G2nQLp&ge=s1!4ae314276dec70b81485031f1f477d61e9203142"></iframe>
-                </div>
-            </div>
-        </div>  
-    </div> -->
+    </div>
     <div class="footer">
         <div class="container">
             <div class="row">
