--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>Swift Development - iOS - Amit Samant</title>
+    <title>Amit Samant iOS Developer</title>
         <!-- Prefetch DNS for external assets (Twitter widgets etc). -->
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -128,7 +128,7 @@
                     	</div>
                 	</div>
                 <div class="col-md-6 footer-info">
-                    <p>Computer science undergraduate and an iOS Engineer with a year of experience. I have done internships in multiple startups, as a intern i have gained a lots of knowledge of development with the help of my seniors and mentors, as i am exploring the world of iOS Development it's getting more and more fascinating i want to gain more knowledge by working on products that are used by a large user base. I am looking to gain experience at a major app company with millions of users.</p>
+                    <p>Computer science undergraduate and an iOS Developer. I have done internships in multiple startups, as a intern i have gained a lots of knowledge of development with the help of my seniors and mentors, as i am exploring the world of iOS Development it's getting more and more fascinating i want to gain more knowledge by working on products that are used by a large user base. I am looking to gain experience at a major app company with millions of users.</p>
                 </div>
             </div>
         </div>
