--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
                     <a href="https://itunes.apple.com/us/app/summer-math-star/id1351411759?ls=1&mt=8" target="_blank">
                         <img src="img/index/KashishIcon.png" class="app-icon"></a>
                     <h2>Kashish</h2>
-                    <p>I am the sole iOS developer for <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">365 Live</a> which is still in development. In 365 Partner you can create, List Your events with us whether it’s a private rsvp only event or a Popular Public event such as concerts and Nightclubs and share your event with other Work associates such as Promoters or team Members. Total control is yours, you can even manage and monitor those users not forget to mention you can communicate and chat to keep everything all in one place</p>
-                    <h3>My Role:</h3>
-                    <p>Built the app from scratch to realeas. Focused on building the UI and logic for create event of diffrent type Public/Private with diffrent type of tickets and availability.</p>
+                    <p>I am the sole iOS developer for <a href="https://apps.apple.com/ee/app/kashish-feedback/id1437711146" target="_blank">Kashish Feedback</a>. Kashish Feedback app is intended to collect your review for our service so that we can increase our quality of service up to your expectations.</p>
+                    <p>Built the app from scratch to release. Focused on building the UI and logic for collecting user feedback through a list of questionnaire show using quiz UI module.</p>
                     <h3>Technologies </h3>
-                    <p>Swift, Push Notifications, MVVM, Core Animations, Push Notification, Applozic realtime chat</p>
-                    <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">
+                    <p>Swift, Push Notifications, MVVM, Core Animations</p>
+                    <a href="https://apps.apple.com/ee/app/kashish-feedback/id1437711146" target="_blank">
                     <button class="btn btn-default app-store-button" type="button"></button></a>
                     <!-- <button id="more-screens-mathstar" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
                 </div>
@@ -128,7 +127,7 @@
                     	</div>
                 	</div>
                 <div class="col-md-6 footer-info">
-                    <p>Computer science undergraduate and an iOS Developer. I have done internships in multiple startups, as a intern i have gained a lots of knowledge of development with the help of my seniors and mentors, as i am exploring the world of iOS Development it's getting more and more fascinating i want to gain more knowledge by working on products that are used by a large user base. I am looking to gain experience at a major app company with millions of users.</p>
+                    <p>Computer science undergraduate and an iOS Developer. I have done internships in multiple startups, as an intern I have gained lots of knowledge in development working with my seniors and mentors. As I am exploring the world of iOS Development, it's getting more and more fascinating. I want to gain more knowledge by working on products that are used by a large user base. I am looking to gain experience at a major app company with millions of users.</p>
                 </div>
             </div>
         </div>
