--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h3>My Role:</h3>
                     <p>Built the app from scratch to realeas. Focused on building the UI and logic for create event of diffrent type Public/Private with diffrent type of tickets and availability.</p>
                     <h3>Technologies </h3>
-                    <p>Swift, Push Notifications, MVVM, Core Animations, Push Notification, Applozic realtime chat</p>
+                    <p>Swift, Push Notifications, MVVM, Core Animations, Applozic realtime chat</p>
                     <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">
                     <button class="btn btn-default app-store-button" type="button"></button></a>
                     <!-- <button id="more-screens-mathstar" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
