--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <h2>iOS Developer</h2></div>
             <!-- <div><a href="#view">View</a></div> -->
     </div>
-    <div class="portfolio" id="view"> 
+    <!-- READD Now tab when u get reemployed  -->
+    <!-- <div class="portfolio" id="view"> 
         <h1>NOW</h1>
         <div class="container">
             <div class="row portfolio-row">
@@ -44,7 +45,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="portfolio">
         <h1>PORTFOLIO</h1>
         <div class="container">
