--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <a href="https://twitter.com/amitsamant_dev" target="_blank"><img src="img/index/twitter-icon.png"></a>
                             <a href="mailto:amitsamant@outlook.com" class="info-link"><img src="img/index/email-icon.png"></a>
                             <a href="https://github.com/DominatorVbN" class="info-link"><img src="img/index/github.png"></a>
-                            <a href="resume/AmitSamant2020.pdf" target="_blank"><img src="img/index/cv-icon.png"></a>
+                            <a href="resume/AmitSamant2020Jul.pdf" target="_blank"><img src="img/index/cv-icon.png"></a>
                     	</div>
                 	</div>
                 <div class="col-md-6 footer-info">
