--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
         <h1>PORTFOLIO</h1>
         <div class="container">
             <div class="row portfolio-row">
+                <div class="col-md-6 phone col-md-push-6"><img class="img-responsive" src="img/index/muse.png"></div>
+                <div class="col-md-6 col-md-pull-6">
+                    <!-- NEED APP STORE LINKS AFTER LAUNCH -->
+                    <img src="img/index/museapplogo.png" class="app-icon">
+                    <h2>MUSE</h2>
+                    <p>I am the principle iOS Developer for MUSE, it is a shopping app created for Middle Eastern Countries, specifically Kuwait, Saudi Arab and UAE, It provide user a digital catalogue of all the products and services that chalhoub group provides.</p>
+                    <h3>My Role:</h3>
+                    <p>Bootstrapped the 2.0 version of the App from scratch, Setup basic MVVM-C architecture, defined code styles using SwiftLint, Configured the CI/CD pipeline with fast lane. Built the entire app to initial TestFlight release.</p>
+                    <p> Also developed in house SDK GravtySDK which is a wrapper around all api provided by Gravty Cloud, and created MuseUtilities package for separating app independent codes.</p>
+                    <h3>Technologies </h3>
+                    <p>Swift, SwiftLint, Fastlane, Graphql using Apollo, ContentfulSwift, MVVM-C, Custom view controller transitions, AppBoy, Braze, UXCam, Firebase Crashlytics, Swift Package, Git Flow</p>
+                    <!--  <button id="more-screens-aluna" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
+                </div>
+            </div>
+            <div class="row portfolio-row">
+                <div class="col-md-6 phone"><img class="img-responsive" src="img/index/SBNRI.png"></div>
+                <div class="col-md-6">
+                    <!-- NEED APP STORE LINKS AFTER LAUNCH -->
+                    <img src="img/index/sbnriapplogo.png" class="app-icon">
+                    <h2>SBNRI</h2>
+                    <p>SBNRI, is a banking application which focuses to ease banking for NRI users by providing service such as forex, and  investing to India from outside,  also it have a large database of FAQs related to every finance topics, and a live QnA module.</p>
+                    <h3>My Role:</h3>
+                    <p>Worked on an team of 2 iOS Developer, on SBNRI app, Bootstrapped the project from scratch established basic MVVM-C architecture and code styling, Developed whole news module, created multiple custom UI control and animated interactions for account opening forms.</p>
+                    <h3>Technologies </h3>
+                    <p>Swift, UICompositionalLayout, Combine, MVVM-C, In-App Purchase, Core Animation, Core Graphics, Custom View Controller transitions.</p>
+                    <!--  <button id="more-screens-aluna" class="btn btn-default more-screens-btn" type="button">More Screens</button> -->
+                </div>
+            </div>
+            <div class="row portfolio-row">
                 <div class="col-md-6 phone col-md-push-6"><img class="img-responsive" src="img/index/365LiveGlossy.png"></div>
                 <div class="col-md-6 col-md-pull-6">
                     <!-- NEED APP STORE LINKS AFTER LAUNCH -->
@@ -68,8 +97,7 @@
             <div class="row portfolio-row">
                 <div class="col-md-6 phone"><img class="img-responsive" src="img/index/HostGlossy.png"></div>
                 <div class="col-md-6">
-                    <a href="https://itunes.apple.com/us/app/summer-math-star/id1351411759?ls=1&mt=8" target="_blank">
-                        <img src="img/index/365hostappicon.png" class="app-icon"></a>
+                    <img src="img/index/365hostappicon.png" class="app-icon">
                     <h2>365 Partner</h2>
                     <p>I am the sole iOS developer for <a href="https://apps.apple.com/in/app/365-partner/id1492460573" target="_blank">365 Live</a> which is still in development. In 365 Partner you can create, List Your events with us whether it’s a private rsvp only event or a Popular Public event such as concerts and Nightclubs and share your event with other Work associates such as Promoters or team Members. Total control is yours, you can even manage and monitor those users not forget to mention you can communicate and chat to keep everything all in one place</p>
                     <h3>My Role:</h3>
